add update 7.40 com novas armadura

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -6,7 +6,14 @@
 <div>
     <a href="/">weather</a>
     <a href="/about">about</a>
-    <a href="/help">help</a>
+    <a href="/help">HEEELP</a>
+    <a >mundial do paumeir</a>
+    <a href="/news">anal do brasil</a>
+    <a href="/astro">gerador de astrologias</a>
+    <a href="/senso">add senso comum</a>
+    <a href="/deus">deus online</a>
+    <a href="/namo">gerador de namorado</a>
+
 
 
 </div>
