--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,7 +15,7 @@
 <img src="img/any.jpg">
         <form>
                 <input placeholder="tipos de fuscao">
-                <button>busca por sucesso</button>
+                <button>kd meu pai</button>
         </form>
         <p id=message1>
         </p>
