update top trabalha pelado

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
     color:#333333;
-    font-family: 'Lucida Sans';
+    font-family: Arial, Helvetica, sans-serif;
     max-width: 650px;
     margin: 0 auto;
     padding: 0 16px;
