--- a/templates/views/deus.hbs
+++ b/templates/views/deus.hbs
@@ -10,8 +10,14 @@
 <body>  
     <div class=everything> 
     {{>header}}
-<p>nunca te pedi nda</p>
+<p>Bencao online</p>
+    <form id=bencaForm>
+                <button>Clique aqui pra ser abencoado</button>
+        </form>
+        <p id=bencaTexto>
+        </p>
     </div>
+    <script src="/js/benca.js"></script>
     {{>footer}}
 
 </body>
