--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,8 +14,8 @@
 
 <img src="img/any.jpg">
         <form>
-                <input placeholder="tipos de fuscao">
-                <button>kd meu pai</button>
+                <input placeholder="digite sua cidade">
+                <button>pelado search</button>
         </form>
         <p id=message1>
         </p>
