very good update

--- a/templates/views/astro.hbs
+++ b/templates/views/astro.hbs
@@ -10,7 +10,7 @@
 <body>  
     <div class=everything> 
     {{>header}}
-<p>nunca te pedi nda</p>
+<p>estou recebendo ondas cosmologicas e preparando o resultado da sua astrologia</p>
     </div>
     {{>footer}}
 
