--- a/templates/views/namo.hbs
+++ b/templates/views/namo.hbs
@@ -10,9 +10,20 @@
 <body>  
     <div class=everything> 
     {{>header}}
-<p>nunca te pedi nda</p>
+<p>essa pagina e o terror da sua tia</p>
+
+<img src=namoImg>
+        <form id=namo>
+                <button>clique aqui pra namorar</button>
+        </form>
+        <p id=namoMsg1>
+        </p>
+        <p id=namoMsg2>
+        </p>
+
     </div>
     {{>footer}}
+    <script src="/js/namo.js"></script>
 
 </body>
 </html>
