--- a/templates/views/news.hbs
+++ b/templates/views/news.hbs
@@ -10,8 +10,17 @@
 <body>  
     <div class=everything> 
     {{>header}}
-<p>nunca te pedi nda</p>
+<p>grandes pensadores comentam pq o brasil n vai pra frente</p>
+
+    <form id=news>
+                <button>clique aqui pra opiniao do especialista</button>
+        </form>
+        <p id=newsMessage1>
+        </p>
+        <p id=newsMessage2>
+        </p>
     </div>
+    <script src="/js/news.js"></script>
     {{>footer}}
 
 </body>
