--- a/templates/views/senso.hbs
+++ b/templates/views/senso.hbs
@@ -10,7 +10,7 @@
 <body>  
     <div class=everything> 
     {{>header}}
-<p>nunca te pedi nda</p>
+<p>insira aqui q nota vc da pra alguma coisa</p>
     </div>
     {{>footer}}
 
