--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -10,7 +10,7 @@
 <body>  
     <div class=everything> 
     {{>header}}
-<p>nunca te pedi nda</p>
+<p>heeeeeeeeeeeeeeeeeeeeeeelp</p>
     </div>
     {{>footer}}
 
