--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,7 @@
    <div class=everything> 
            {{>header}}
 
-<img src="img/any.jpg">
+<img id=relaxImg src="img/relax.jpg">
         <form>
                 <input placeholder="digite sua cidade">
                 <button>pelado search</button>
