--- a/templates/views/namo.hbs
+++ b/templates/views/namo.hbs
@@ -12,12 +12,12 @@
     {{>header}}
 <p>essa pagina e o terror da sua tia</p>
 
-<img src=namoImg>
         <form id=namo>
                 <button>clique aqui pra namorar</button>
         </form>
         <p id=namoMsg1>
         </p>
+        <img src="img/null.jpg" id=namoImg>
         <p id=namoMsg2>
         </p>
 
