--- a/templates/views/news.hbs
+++ b/templates/views/news.hbs
@@ -15,8 +15,9 @@
     <form id=news>
                 <button>clique aqui pra opiniao do especialista</button>
         </form>
+        <img src="img/null.jpg" id=newsImage>
         <p id=newsMessage1>
-        </p>
+        </p>        
         <p id=newsMessage2>
         </p>
     </div>
