--- a/templates/views/astro.hbs
+++ b/templates/views/astro.hbs
@@ -11,7 +11,23 @@
     <div class=everything> 
     {{>header}}
 <p>estou recebendo ondas cosmologicas e preparando o resultado da sua astrologia</p>
+    <img src="img/flat.gif" id=astroImg>
+    <form id=astro>
+                <button>tape o umbigo e clique aqui</button>
+        </form>
+        
+    <p id=astroMessage1>
+        </p>        
+    <p id=astroMessage2>
+        </p>
+    <p id=astroMessage3>
+        </p>        
+    <p id=astroMessage4>
+        </p>
+    <p id=astroMessage5>
+        </p>
     </div>
+    <script src="/js/astro.js"></script>
     {{>footer}}
 
 </body>
