--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -8,7 +8,7 @@
     <a href="/about">about</a>
     <a href="/help">HEEELP</a>
     <a >mundial do paumeir</a>
-    <a href="/news">anal do brasil</a>
+    <a href="/news">analise do brasil</a>
     <a href="/astro">gerador de astrologias</a>
     <a href="/deus">deus online</a>
     <a href="/namo">gerador de namorado</a>
