--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -12,6 +12,7 @@
     <a href="/astro">gerador de astrologias</a>
     <a href="/deus">deus online</a>
     <a href="/namo">gerador de namorado</a>
+    <a href="/pudol">desenhe um pudol</a>
 
 
 
