--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,8 @@
 <body>  
     <div class=everything> 
     {{>header}}
-<p>eu sou a pagina do cramunhao, teu cu vai pegar fogo AGORA</p>
+<p>essa pagina eh sobre estilo e moda, primavera verao, verao verao, inverno verao, e outras modas assim</p>
+    <img class=portrait src="/img/carne.jpg">
     </div>
     {{>footer}}
 
